fix mathjax overflow

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -10,6 +10,11 @@ body {
     color: #{{ site.color.secondary-dark }};
 }
 
+.MathJax_Display {
+    max-width: 100%;
+    overflow-y: scroll;
+}
+
 .text-muted {
     color: #777;
 }
